--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -52,11 +52,29 @@ services:
       - MYSQL_ALLOW_EMPTY_PASSWORD=yes
       - MYSQL_DATABASE=eo2uaa
     command: mysqld --lower_case_table_names=1 --skip-ssl --character_set_server=utf8mb4 --explicit_defaults_for_timestamp
-#  eo2uaa-elasticsearch:
-#    image: 'docker.elastic.co/elasticsearch/elasticsearch:6.8.6'
-#    environment:
-#      - ES_JAVA_OPTS=-Xms1024m -Xmx1024m
-#      - discovery.type=single-node
+  #  eo2uaa-elasticsearch:
+  #    image: 'docker.elastic.co/elasticsearch/elasticsearch:6.8.6'
+  #    environment:
+  #      - ES_JAVA_OPTS=-Xms1024m -Xmx1024m
+  #      - discovery.type=single-node
+
+  eooquiz:
+    image: eooquiz
+    environment:
+      - _JAVA_OPTIONS=-Xmx512m -Xms256m
+      - 'SPRING_PROFILES_ACTIVE=prod,swagger'
+      - MANAGEMENT_METRICS_EXPORT_PROMETHEUS_ENABLED=true
+      - 'EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE=http://admin:$${jhipster.registry.password}@jhipster-registry:8761/eureka'
+      - 'SPRING_CLOUD_CONFIG_URI=http://admin:$${jhipster.registry.password}@jhipster-registry:8761/config'
+      - 'SPRING_DATA_MONGODB_URI=mongodb://eooquiz-mongodb:27017'
+      - SPRING_DATA_MONGODB_DATABASE=eooQuiz
+      - JHIPSTER_SLEEP=30
+      - 'KAFKA_BOOTSTRAPSERVERS=kafka:9092'
+      - JHIPSTER_REGISTRY_PASSWORD=eo2-jhr-admin
+  eooquiz-mongodb:
+    image: 'mongo:4.2.3'
+    ports:
+      - '27017:27017'
 
   quotes:
     image: quotes
